[package]
name = "tcp-game"
version = "0.1.0"
edition = "2021"
authors = ["Aaron 彭亚伦 a@iy.rs"]
license = "MIT"
repository = "https://github.com/Arstman/substrateCourses/tree/main/lesson3/tcp-game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
