[package]
name = "traffic-light"
version = "0.1.0"
edition = "2021"
authors = ["Aaron 彭亚伦 a@iy.rs"]
license = "MIT"
repository = "https://github.com/Arstman/substrateCourses/tree/main/lesson4/traffic-light"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
